# NJUWA

./: README.md
GenAlign/: CMakeLists.txt  README.md  a.out  distance.cpp  distance.h  forpreconfig.txt  imodel2  imodelh  increh  infer_align.cpp  infer_align.h  infer_align2.cpp  infer_align2.h  infer_alignh.cpp  infer_alignh.h  main.cpp  model1  model1config.txt  model2config.txt  modelh  modelhconfig.txt  modelhinfer.txt  modelhinferwithvec.txt  pre_process.cpp  pre_process.h  pycall.cpp  rimodelh  rmodel1config.txt  rmodel2config.txt  rmodelhconfig.txt  rsync.sh  testVec.txt  two_index_infer_align.cpp  two_index_infer_align.h  two_vocab_infer_align.cpp  two_vocab_infer_align.h  unalignedh.txt  vocab.cpp  vocab.h
GenAlignPyCall/: CMakeLists.txt  infer_align.h  infer_align2.h  infer_alignh.cpp  infer_alignh.h  pre_process.h  rsync.sh
MyIncreAlign/: CMakeLists.txt  incre_model1.cpp  incre_model1.h  incre_model2.cpp  incre_model2.h  incre_modelh.cpp  incre_modelh.h  main.cpp
model1/: CMakeLists.txt  LOO.h  LOOforKeyword.h  PriorEM.h  common.h  ext.h  extendmethod.h  iEM.h  main.cpp  original.h  sEM.h  sEMwithLOO.h  soriginal.h
model2/: CMakeLists.txt  EMwithLOO.h  EMwithLOOlex.h  LOOforKeyword.h  Original.h  PriorEM.h  common.h  main.cpp
modelh/: CMakeLists.txt  Commons.h  LOOforKeyword.h  LeaveOneOut.h  Original.h  PriorEM.h  main.cpp  rsync.sh
wordaligntest/: corpus.ch  corpus.ch.vcb  corpus.en  corpus.en.vcb  corpus4pre.ch  modelh.ch.en.AlCount  modelh.ch.en.ai  modelh.ch.en.align  modelh.ch.en.bi  modelh.ch.en.t  test.qin.align
wordalignweb/: db.sqlite3  (+7 more)
(+14 files in other folders)
